# biolink-model

./: .cruft.json  .gitignore  .linkmllint.yaml  .travis.yml  .yamllint-config  404.html  AGENTS.md  AUTHORS  CITATION.cff  CODE_OF_CONDUCT.md  ChangeLog  MANIFEST.in  Makefile  Migration_2.0_Guide.md  Migration_3.0_Guide.md  Pipfile  README.md  SEMMEDDB_exclude_list.tsv  USAGE_EXAMPLE.md  _config.yaml  _config.yml  about.yaml  annotation-resource-descriptor.yaml  aspects.html  aspects.json  associations.json  attributes.yaml  biolink-model-prefix-map.json  biolink-model.context.jsonld  biolink-model.graphql  biolink-model.json  biolink-model.jsonld  biolink-model.owl  biolink-model.owl.ttl  biolink-model.proto  biolink-model.shacl.ttl  biolink-model.shex  biolink-model.shexj  biolink-model.ttl  biolink-model.yaml  (+53 more)
.github/: ai-controllers.json  copilot-setup-steps.yml  dependabot.yml
AccessibleDnaRegion/: index.html
Activity/: index.html
ActivityAndBehavior/: index.html
AdministrativeEntity/: index.html
AffinityMeasurement/: index.html
AffinityParameterEnum/: index.html
Agent/: index.html
AgentTypeEnum/: index.html
AnatomicalEntity/: index.html
AnatomicalEntityHasPartAnatomicalEntityAssociation/: index.html
AnatomicalEntityPartOfAnatomicalEntityAssociation/: index.html
AnatomicalEntityToAnatomicalEntityAssociation/: index.html
AnatomicalEntityToAnatomicalEntityOntogenicAssociation/: index.html
AnatomicalEntityToAnatomicalEntityPartOfAssociation/: index.html
Annotation/: index.html
ApprovalStatusEnum/: index.html
Article/: index.html
Association/: index.html
Attribute/: index.html
Bacterium/: index.html
Behavior/: index.html
BehaviorToBehavioralFeatureAssociation/: index.html
BehavioralExposure/: index.html
BehavioralFeature/: index.html
BehavioralOutcome/: index.html
BinaryRelationEnum/: index.html
Biolink-Model/: index.html
BiologicalEntity/: index.html
BiologicalProcess/: index.html
BiologicalProcessOrActivity/: index.html
BiologicalProcessOrActivityToAnatomicalEntityAssociation/: index.html
BiologicalProcessOrActivityToBiologicalProcessOrActivityAssociation/: index.html
BiologicalProcessOrActivityToGeneOrGeneProductOrGeneFamilyAssociation/: index.html
BiologicalSequence/: index.html
BiologicalSex/: index.html
BioticExposure/: index.html
Book/: index.html
BookChapter/: index.html
Boolean/: index.html
Case/: index.html
CaseToDiseaseAssociation/: index.html
CaseToEntityAssociationMixin/: index.html
CaseToGeneAssociation/: index.html
CaseToPhenotypicFeatureAssociation/: index.html
CaseToVariantAssociation/: index.html
CategoryType/: index.html
CausalGeneToDiseaseAssociation/: index.html
CausalMechanismQualifierEnum/: index.html
Cell/: index.html
CellLine/: index.html
CellLineAsAModelOfDiseaseAssociation/: index.html
CellLineToDiseaseOrPhenotypicFeatureAssociation/: index.html
CellLineToEntityAssociationMixin/: index.html
CellularComponent/: index.html
CellularOrganism/: index.html
ChemicalAffectsBiologicalEntityAssociation/: index.html
ChemicalAffectsGeneAssociation/: index.html
ChemicalEntity/: index.html
ChemicalEntityAssessesNamedThingAssociation/: index.html
ChemicalEntityDerivativeEnum/: index.html
ChemicalEntityOrGeneOrGeneProduct/: index.html
ChemicalEntityOrGeneOrGeneProductRegulatesGeneAssociation/: index.html
ChemicalEntityOrProteinOrPolypeptide/: index.html
ChemicalEntityToBiologicalProcessAssociation/: index.html
ChemicalEntityToChemicalDerivationAssociation/: index.html
ChemicalEntityToChemicalEntityAssociation/: index.html
ChemicalEntityToDiseaseOrPhenotypicFeatureAssociation/: index.html
ChemicalEntityToEntityAssociationMixin/: index.html
ChemicalEntityToPathwayAssociation/: index.html
ChemicalExposure/: index.html
ChemicalFormulaValue/: index.html
ChemicalGeneInteractionAssociation/: index.html
ChemicalGeneSensitivityAssociation/: index.html
ChemicalMixture/: index.html
ChemicalOrDrugOrTreatment/: index.html
ChemicalOrDrugOrTreatmentAdverseEventAssociation/: index.html
ChemicalOrDrugOrTreatmentSideEffectAssociation/: index.html
ChemicalOrDrugOrTreatmentSideEffectDiseaseOrPhenotypicFeatureAssociation/: index.html
ChemicalOrDrugOrTreatmentToDiseaseOrPhenotypicFeatureAssociation/: index.html
ChemicalOrGeneOrGeneProductFormOrVariantEnum/: index.html
ChemicalRole/: index.html
ChemicalToChemicalAssociation/: index.html
ChemicalToChemicalDerivationAssociation/: index.html
ChemicalToDiseaseOrPhenotypicFeatureAssociation/: index.html
ChemicalToEntityAssociationMixin/: index.html
ChemicalToPathwayAssociation/: index.html
ChiSquaredAnalysisResult/: index.html
ClinicalApprovalStatusEnum/: index.html
ClinicalAttribute/: index.html
ClinicalCourse/: index.html
ClinicalEntity/: index.html
ClinicalFinding/: index.html
ClinicalIntervention/: index.html
ClinicalMeasurement/: index.html
ClinicalModifier/: index.html
ClinicalTrial/: index.html
ClinicalTrialAgeStageEnum/: index.html
ClinicalTrialStatusEnum/: index.html
CodingSequence/: index.html
Cohort/: index.html
CommonDataElement/: index.html
ComplexChemicalExposure/: index.html
ComplexMolecularMixture/: index.html
ConceptCountAnalysisResult/: index.html
ConfidenceLevel/: index.html
ContributorAssociation/: index.html
CorrelatedGeneToDiseaseAssociation/: index.html
Curie/: index.html
Dataset/: index.html
DatasetDistribution/: index.html
DatasetSummary/: index.html
DatasetVersion/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Device/: index.html
DiagnosticAid/: index.html
DirectionQualifierEnum/: index.html
Disease/: index.html
DiseaseAssociatedWithResponseToChemicalEntityAssociation/: index.html
DiseaseOrPhenotypicFeature/: index.html
DiseaseOrPhenotypicFeatureExposure/: index.html
DiseaseOrPhenotypicFeatureOutcome/: index.html
DiseaseOrPhenotypicFeatureToEntityAssociationMixin/: index.html
DiseaseToDiseaseAssociation/: index.html
(+7788 files in other folders)
