[project]
name = "biolink-model"
dynamic = ["version"]
description = "The Biolink Model is a high-level data model designed to standardize types and relationships in biological knowledgebases."
authors = [
    {name = "Chris Mungall", email = "cjm@berkeleybop.org"},
    {name = "Deepak Unni", email = "deepak.unni3@gmail.com"},
    {name = "Sierra Moxon", email = "smoxon@lbl.gov"},
    {name = "Richard Bruskiewich", email = "richard@starinformatics.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "curies>=0.9.0,<1",
    "prefixmaps>=0.2.3,<1",
    "pyyaml>=6.0.1,<7",
    "stringcase>=1.2.0,<2",
    "beautifulsoup4>=4.0.0",
    "path>=17.0.0,<18",
    "linkml-runtime==1.9.5",
    "requests>=2.32.3",
    "linkml==1.9.4",
    "click>8.0.0,<8.2.0",
]

[project.scripts]
generate_viz_json = "biolink_model.scripts.generate_json:generate_viz_json"

[project.optional-dependencies]
docs = ["mkdocs-material"]

[dependency-groups]
dev = [
    "linkml>=1.6.3",
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=9.5.17,<10",
    "mkdocs-mermaid2-plugin>=1.1.1,<2",
    "schemasheets>=0.2.1,<0.3",
    "codespell>=2.2.6,<3",
    "pytest>=8.1.1,<10",
    "yamllint>=1.35.1,<2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/biolink_model"]

[tool.codespell]
skip = '.idea,.git,SEMMEDDB*,semmed*,*.svg,docs,./src/docs/registry.md,./.venv'
ignore-words-list = 'amination,ehr,mor,brite,nin,mirgate'
