[metadata]
name = biolink-model
url = https://github.com/biolink/biolink-model
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Biolink Model
home-page = https://biolink.github.io/biolink-model/docs/
license = CC0 1.0 Universal
python-requires = >=3.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    biolink
    model
