[metadata]
name = biolink_model
description = 'A high level datamodel of biological entities and associations'
version = 3.5.3

url = https://github.com/biolink/biolink-model
author = Harold Solbrig
author-email = smoxon@lbl.gov
summary = Biolink Model
home-page = https://biolink.github.io/biolink-model/docs/
license = CC0 1.0 Universal
python-requires = >=3.9
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
keywords =
    Biolink
    Datamodel
    NCATS
    NCATS-Translator

[files]
packages =
    biolink
